tests/unit/default/syntax-error/169-alter-table-dot-name-type-default.x.t
---- IN ----
*%table.name:int=42|
---- OUT ----
---- ERR ----
syntax: expected `=>` after `...ame:int=42` near `|` at position 19 - at line 1
---- EXIT ----
1
